fix siteMessage on mobile

--- a/web/saito/css-imports/saito-components2.css
+++ b/web/saito/css-imports/saito-components2.css
@@ -587,3 +587,11 @@ div#message-wrapper {
     font-size: 3rem;
     color: #fff !important;
   }
+
+  @media only screen and (max-width: 600px) {
+   div#message-wrapper {
+    min-width: min(450px, 95vw);
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
